--- a/shopping_cart_frontend/package.json
+++ b/shopping_cart_frontend/package.json
@@ -11,6 +11,7 @@
     "braintree-web": "^3.65.0",
     "braintree-web-drop-in-react": "^1.1.2",
     "font-awesome": "^4.7.0",
+    "moment": "^2.27.0",
     "query-string": "^6.13.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -42,6 +43,9 @@
   },
   "devDependencies": {
     "@iconify/icons-fe": "^1.0.5",
+    "@iconify/icons-ic": "^1.0.16",
+    "@iconify/icons-mdi": "^1.0.132",
+    "@iconify/icons-zmdi": "^1.0.3",
     "@iconify/react": "^1.1.3"
   }
 }
